<resources>
    <string name="app_name">Movie Application</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorites</string>
    <string name="what_would_you_like_to_watch">What would you like to watch?</string>
    <string name="movies_shows_and_more">Movies, shows and more</string>
    <string name="movies">Movies</string>
    <string name="movie_title">Movie Title</string>
    <string name="todo">TODO</string>
    <string name="genre">Genre •</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="title_detail">Detail Fragment</string>
    <string name="no_internet">Oops! Something went wrong. Check your internet connection.</string>
    <string name="unknown_err">An unexpected error occurred. Please try again later.</string>
    <string name="ok">OK</string>
    <string name="price">9.99\n</string>
    <string name="back">Back</string>
    <string name="short_description">Short Description:</string>
    <string name="short_desc_sample">Get ready to rock! In this upbeat musical, Barbie™ stars as Princess Courtney, a modern princess</string>
    <string name="content_description">Content description</string>
    <string name="full_description">Full Description:</string>
    <string name="price_label">Price: </string>
    <string name="genre_label">Genre: </string>
    <string name="artist_label">Artist: </string>
    <string name="release_date_label">Release Date: </string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="movies_you_like">Movies you like</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="release_date">Release Date</string>
    <string name="artist">Artist</string>
    <string name="viewed_last_12_6_2023">Viewed last 12/6/2023</string>

</resources>