<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded"
    tools:context=".presentations.detail.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                app:elevation="0dp">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:fadingEdge="vertical"
                    android:paddingStart="6dp"
                    android:paddingEnd="16dp"
                    app:contentInsetStartWithNavigation="0dp"
                    app:navigationIcon="@drawable/baseline_close_24" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_item_image"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/todo"
                    android:layout_margin="10dp"
                    android:src="@drawable/woman" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_title"
                        android:paddingBottom="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="2dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/release_date_label"/>

                        <TextView
                            android:id="@+id/tv_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/artist_label"/>

                        <TextView
                            android:id="@+id/tv_artist"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/artist" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/genre_label"/>

                        <TextView
                            android:id="@+id/tv_genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/genre" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/price_label" />

                        <TextView
                            android:id="@+id/tv_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <Button
                        android:id="@+id/btn_add_to_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        style="?attr/materialIconButtonOutlinedStyle"
                        android:drawableLeft="@drawable/baseline_add_24"
                        android:drawablePadding="4dp"
                        android:visibility="visible"
                        android:text="@string/add_to_favorite" />
                    <Button
                        android:id="@+id/btn_added_to_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:visibility="gone"
                        style="?attr/materialIconButtonFilledTonalStyle"
                        android:backgroundTint="@color/white"
                        android:drawableLeft="@drawable/baseline_delete_outline_24"
                        android:drawablePadding="4dp"
                        android:text="@string/remove_from_favorite" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="10dp"
                android:text="@string/full_description" />

            <TextView
                android:id="@+id/tv_full_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/short_desc_sample" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>