<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_movie_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background">


            <ImageView
                android:id="@+id/iv_item_image"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/woman" />

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:lines="3"
                android:maxLines="2"
                android:text="@string/movie_title"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/genre"
                android:textAlignment="center"
                android:textSize="11sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/price"
                    android:layout_weight="0.9"
                    android:textSize="11sp" />

                <ImageView
                    android:layout_weight="0.1"
                    android:id="@+id/iv_star"
                    android:layout_width="40dp"
                    android:padding="4dp"
                    android:layout_height="40dp"
                    android:src="@drawable/round_gray_star_rate_24" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_recently_viewed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="4dp"
            android:textSize="11sp"
            android:visibility="invisible"
            android:background="#80000000"
            android:text="@string/viewed_last_12_6_2023" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>