<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cjayme.movielistapplication.presentations.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_favorite"
            app:destination="@id/navigation_favorite"
            app:exitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search"
            app:exitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail"
            app:exitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_home_to_navigation_genre"
            app:destination="@id/navigation_genre"
            app:exitAnim="@android:anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.cjayme.movielistapplication.presentations.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_detail"
            app:destination="@id/navigation_detail"
            app:exitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_search_to_navigation_favorite"
            app:destination="@id/navigation_favorite"
            app:exitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_search_to_navigation_home"
            app:destination="@id/navigation_home"
            app:exitAnim="@android:anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.cjayme.movielistapplication.presentations.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_detail"
            app:destination="@id/navigation_detail"
            app:exitAnim="@android:anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_home"
            app:destination="@id/navigation_home"
            app:exitAnim="@android:anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.cjayme.movielistapplication.presentations.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_navigation_detail_to_navigation_favorite"
            app:destination="@id/navigation_favorite"
            app:exitAnim="@android:anim/slide_out_right"/>
        <argument
            android:name="trackId"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigation_detail_to_navigation_home"
            app:destination="@id/navigation_home"
            app:exitAnim="@android:anim/slide_out_right"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_genre"
        android:name="com.cjayme.movielistapplication.presentations.genre.GenreFragment"
        android:label="@string/genre"
        tools:layout="@layout/fragment_genre" >
        <action
            android:id="@+id/action_navigation_genre_to_navigation_detail"
            app:destination="@id/navigation_detail"
            app:exitAnim="@android:anim/slide_out_right"/>
        <argument
            android:name="genre"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_genre_to_navigation_home"
            app:destination="@id/navigation_home"
            app:exitAnim="@android:anim/slide_out_right"/>
    </fragment>

</navigation>